--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <p>
             Natural ventilation systems facilitate cross ventilation (using side wall and roof vents) in the greenhouse. Six naturally ventilated poly houses provided with fogger and drip irrigation in an area of 580 m2 each were established for cultivation of different vegetables and flowers such as capsicum, cucumber, tomato, chrysanthemum, marigold, rose, gerbera and carnations.
         </p>
-        <img src="Images/Greenhouse.jpg" height="200" width="400"/>
+        <img src="Greenhouse.jpg" height="200" width="400"/>
         <h3>
             Fan and Pad Polyhouses
         </h3>
         <p>
             Fan and pad systems consist of exhaust fans at one end of the greenhouse and a pump circulating water through and over a porous pad installed at the opposite end of the greenhouse.Three climate-controlled fan and pad polyhouses of 580 m2 each with motorized side ventilation operating system were established to raise off-season vegetables. One of the structures established is ear-marked for production of chrysanthemum flowers throughout the year by providing artificial light. The structures can be used for raising high value vegetables like lettuce, chives, broccoli, brussels sprout, red cabbage, cucumber etc.
         </p>
-        <img src="Images/FPP.jpg" height="450" width="600"/>
+        <img src="FPP.jpg" height="450" width="600"/>
         <h4>
             Screen houses
         </h4>
@@ -49,7 +49,7 @@
                 <td> Tomato</td>
             </tr>
         </table>
-        <img src="Images/Table.png" height="300" width="500"/>
+        <img src="Table.png" height="300" width="500"/>
         <a href="Page 2.html"> Next Page</a>
     </body>
 </html>
